Fix economy exploits from unvalidated PvP/tax config values